[kurento-test] Bug-fix: read URL if available from test scenario
Change-Id: I2f7d53fe38599cd6a0e0edbe11bf64fa7c54043e